--- a/overlay/packages/apps/Mms/res/xml/mms_config.xml
+++ b/overlay/packages/apps/Mms/res/xml/mms_config.xml
@@ -38,7 +38,7 @@
          set the limit above this value. -->
     <int name="maxMessageCountPerThread">5000</int>
     <!-- UAProf URL -->
-    <string name="uaProfUrl">http://wap.samsungmobile.com/uaprof/SM-N910T.xml</string>
+    <string name="uaProfUrl">http://wap.samsungmobile.com/uaprof/SM-N915FY.xml</string>
     <!-- Maximum number of recipients allowed per message. Use a value of -1
          to indicate no limit. -->
     <int name="recipientLimit">-1</int>
@@ -50,5 +50,5 @@
          to indicate default value -->
     <int name="maxMessageTextSize">-1</int>
     <!-- User-Agent parameter used in MMS http request -->
-    <string name="userAgent">trlte</string>
+    <string name="userAgent">tblte</string>
 </mms_config>
