--- a/overlay/packages/apps/Bluetooth/res/values/config.xml
+++ b/overlay/packages/apps/Bluetooth/res/values/config.xml
@@ -33,5 +33,12 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
     <bool name="profile_supported_a2dp_sink">true</bool>
     <bool name="profile_supported_sap">true</bool>
     <bool name="disable_non_aosp_bt_features">true</bool>
+    <!-- Configuring priorities of A2DP source codecs. Larger value means
+         higher priority. Value -1 means the codec is disabled.
+         Value 0 is reserved and should not be used here. Enabled codecs
+         should have priorities in the interval [1, 999999], and each priority
+         value should be unique. -->
+    <integer name="a2dp_source_codec_priority_aptx">-1</integer>
+    <integer name="a2dp_source_codec_priority_aptx_hd">-1</integer>
 </resources>
 
