--- a/overlay-lineage/frameworks/base/core/res/res/values/config.xml
+++ b/overlay-lineage/frameworks/base/core/res/res/values/config.xml
@@ -14,6 +14,6 @@
 <!-- These resources are around just to allow their values to be customized
      for different hardware and product builds.  Do not translate. -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <bool name="config_deviceHasVariableButtonBrightness">true</bool>
+    <!--<bool name="config_deviceHasVariableButtonBrightness">true</bool>-->
 
 </resources>
